--- a/Lab-3---Invaders-master/Lab 3 - Invaders/Lab 3 - Invaders.csproj
+++ b/Lab-3---Invaders-master/Lab 3 - Invaders/Lab 3 - Invaders.csproj
@@ -84,6 +84,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Obstacle.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\bug1.png" />
